# pocket-term

./: .clangd  .editorconfig  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  app.cpp  app.h  app_manager.cpp  app_manager.h  build.sh  cmake_install.cmake  compile_commands.json  event.cpp  event.h  logging.cpp  logging.h  main.cpp  os.cpp  os.h  pocket-term  ui.cpp  ui.h  utilities.cpp  utilities.h
.cache/clangd/index/: Availability.h.014A38C4BE875A5C.idx  AvailabilityInternal.h.2D1353FCC24BC722.idx  AvailabilityInternalLegacy.h.3C70792BCE448A1C.idx  AvailabilityVersions.h.F8521FE76F4BF2C2.idx  _OSByteOrder.h.66D5E4F1F79B693D.idx  _OSByteOrder.h.E8911D3150B4CF57.idx  ___wctype.h.195F10D84FE43812.idx  ___wctype.h.D93AFC1EE44F267F.idx  __assert.3295F90409276BF0.idx  __assertion_handler.7A04AA838A18FEE1.idx  __bit_reference.5DF8CDC9544D1AE7.idx  __config.2D69E1EEC5AFB747.idx  __config_site.5BC588BBAF0DA826.idx  __endian.h.5E848F1E15A30D70.idx  __hash_table.74E37A80908A1E80.idx  __locale.A69BD60E61395928.idx  __mbstate_t.h.1BD595C5CAFC5051.idx  __node_handle.3D6E6090352147A3.idx  __split_buffer.5D17761DE20A9268.idx  __std_mbstate_t.h.AD3680595385FC93.idx  __stddef_null.h.88BCDD35BEE3B342.idx  __tree.BD6E9C6B59A3211F.idx  __undef_macros.933E04FD6D0C1B1A.idx  __verbose_abort.D9297EE81356F2FB.idx  __wctype.h.959894E37B42B28F.idx  __xlocale.h.9E84EC031C2CF551.idx  _abort.h.CD0F70FC92351806.idx  _assert.h.DA8CE50934ABFA56.idx  _blkcnt_t.h.852AAF56FBA1AE1F.idx  _blksize_t.h.8E8FA56B99EF998C.idx  _bounds.h.DB7CF085D21B0A03.idx  _caddr_t.h.2461B79E899035D6.idx  _clock_t.h.9ACEBC71CFBC622B.idx  _ct_rune_t.h.9F87364EC49DA408.idx  _ctermid.h.CCE6C7DA49759F51.idx  _ctype.h.193BC2C5F5EC2F67.idx  _ctype.h.B92F75222A3B2C58.idx  _dev_t.h.3A30BA7405CE8C99.idx  _endian.h.13260C21EDD019D3.idx  _endian.h.7D132B82FB51C514.idx  (+856 more)
.github/workflows/: build-rpi.yml
apps/: app.cpp  app.h  home.cpp  home.h  launcher.cpp  launcher.h
doc/adr/: 0001-record-architecture-decisions.md  0002-drivers-will-be-handled-directly-in-the-app-not-system-wide.md  0003-we-will-use-a-rapberry-pi-zero-2w-as-the-processor.md
drivers/: cardkb.cpp  cardkb.h  display.cpp  display.h  event_source.cpp  event_source.h  sim800l.cpp  sim800l.h  tty_display.cpp  tty_display.h
scripts/: build.sh  promote.sh  run.sh  setup_rpi.sh  update.sh
src/: config.h  enums.h  main.cpp
src/apps/: app.cpp  app.h  home.cpp  home.h  launcher.cpp  launcher.h  terminal.cpp  terminal.h
src/core/: actor.cpp  actor.h  app_manager.cpp  app_manager.h  enqueuer.cpp  enqueuer.h  event.h  logging.cpp  logging.h  message.cpp  message.h  os.cpp  os.cpp.bak  os.h  time_utils.cpp  time_utils.h
src/drivers/: cardkb.cpp  cardkb.h  display.cpp  display.h  event_source.h  keyboard.cpp  keyboard.h  message_source.cpp  message_source.h  sim800l.cpp  sim800l.h  tty_display.cpp  tty_display.h  waveshare_eink.cpp  waveshare_eink.h
src/input/: input.cpp  input.h
src/ui/: box_widget.cpp  box_widget.h  input_widget.cpp  input_widget.h  list_widget.cpp  list_widget.h  screen.cpp  screen.h  status_bar.cpp  status_bar.h  text_widget.cpp  text_widget.h  time_widget.cpp  time_widget.h  ui.cpp  ui.h  vertical_widget.cpp  vertical_widget.h  widget.cpp  widget.h
ui/: screen.h  ui.cpp  ui.h
